font and heights updated

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+html {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   background-color: rgb(226, 178, 231);
+  height: 100%;
 }
