--- a/src/components/Users/SingleUser/singleUser.module.scss
+++ b/src/components/Users/SingleUser/singleUser.module.scss
@@ -1,8 +1,13 @@
 @import "../../../styles/mixins.scss";
 
 .singleUser {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .loading {
+    color: white;
+    @include main-font(400, 3rem);
+  }
 }
