--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,5 +1,5 @@
 @mixin main-font($weight, $size) {
-  // font-family: 'Dosis', sans-serif;
+  font-family: inherit;
   font-weight: $weight;
   font-size: $size;
 }
