--- a/src/components/Users/SingleUser/singleUser.module.scss
+++ b/src/components/Users/SingleUser/singleUser.module.scss
@@ -12,4 +12,5 @@
   }
 }
 
-// It have be updated in ther future for height bugs
+// It has be updated in ther future for height bugs
+// unExpected additional height
